Update WooPay button's min-width to prevent button from being cut off
This applies to both the medium and large WooPay buttons.

--- a/client/checkout/woopay/style.scss
+++ b/client/checkout/woopay/style.scss
@@ -216,7 +216,7 @@
 		&[data-type='buy'],
 		&[data-type='book'],
 		&[data-type='donate'] {
-			min-width: 240px;
+			min-width: 229px;
 
 			svg {
 				flex-shrink: 0.6;
@@ -249,7 +249,7 @@
 		&[data-type='buy'],
 		&[data-type='book'],
 		&[data-type='donate'] {
-			min-width: 280px;
+			min-width: 229px;
 
 			svg {
 				flex-shrink: 0.6;
